{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_our-curriculum/collection.yml
+++ b/_our-curriculum/collection.yml
@@ -10,7 +10,7 @@ collections:
       - Curriculum/Science.md
       - Curriculum/Aesthetics.md
       - Curriculum/Character & Citizenship Education.md
-      - Curriculum/Information & Communication Technology.md
+      - Curriculum/Information & Communications Technology.md
       - Curriculum/Physical Education.md
       - Curriculum/Programme for Active Learning.md
       - Curriculum/Social Studies.md
