--- a/_others/collection.yml
+++ b/_others/collection.yml
@@ -7,6 +7,7 @@ collections:
       - Highlights/Oasis Awards Day 2023.md
       - Highlights/Oasis Awards Day 2022.md
       - Highlights/Outstanding Youth in Education Award.md
+      - School Life/School Canteen Menu.md
       - School Life/.keep
       - School Life/Assessment Information.md
       - School Life/School Hours & Operations.md
