{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_others/collection.yml
+++ b/_others/collection.yml
@@ -14,7 +14,7 @@ collections:
       - School Life/School Bus Service.md
       - School Life/School Bookshop & Uniform.md
       - School Life/School Canteen.md
-      - School Life/School Canteen Menu.md
+      - School Life/School Canteen Food Menu.md
       - School Life/Sexuality Education.md
       - Forms & Guides/.keep
       - Forms & Guides/Application Forms.md
