--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Oasis Primary School
 url: https://oasispri-moe-edu-sg-admin.cwp.sg
-favicon: /images/Oasis.jpeg
+favicon: /images/Banner/logo.jpg
 colors:
   primary-color: "#5cbe6b"
   secondary-color: "#000000"
@@ -51,8 +51,9 @@ plugins:
   - jekyll-remote-theme
 staging: https://staging.d6400o65xh90r.amplifyapp.com
 prod: https://master.d6400o65xh90r.amplifyapp.com
-shareicon: /images/Oasis.jpeg
+shareicon: /images/Banner/logo.jpg
 is_government: false
 facebook-pixel: ""
 google_analytics: ""
 linkedin-insights: ""
+google_analytics_ga4: ""
