{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_our-pride/collection.yml
+++ b/_our-pride/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - Our Pride.md
+      - Students Achievements/Achievements 2024.md
       - Students Achievements/Achievements 2023.md
       - Students Achievements/.keep
       - Students Achievements/Achievements 2022.md
