{"message":"Update file: collection.yml","userId":"981","fileName":"collection.yml"}

--- a/_our-distinctiveness/collection.yml
+++ b/_our-distinctiveness/collection.yml
@@ -5,4 +5,4 @@ collections:
       - Oasis Learning Experiences.md
       - Learning for Life Programme.md
       - Place Based Learning.md
-      - Sustainable Singapore Movement.md
+      - Environmental Sustainability Education.md
