{"message":"Update file: navigation.yml","userId":"2280","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,8 @@ links:
   - title: Our Distinctiveness
     url: /our-distinctiveness/oasis-learning-experiences/
     sublinks:
-      - title: Sustainable Singapore Movement
-        url: /our-distinctiveness/sustainable-singapore-movement/
+      - title: Environmental Sustainability
+        url: /our-distinctiveness/environmental-sustainability-education/
       - title: Learning for Life Programme
         url: /our-distinctiveness/learning-for-life-programme/
       - title: Oasis Learning Experiences
