--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ links:
   - title: Our School
     collection: our-school
   - title: Our Distinctiveness
-    url: /our-distinctiveness/
+    url: /our-distinctiveness/our-distinctiveness/
     sublinks:
       - title: Environmental Sustainability
         url: /our-distinctiveness/environmental-sustainability-education/
