--- a/_our-family/collection.yml
+++ b/_our-family/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - School Leaders.md
       - Key Personnel.md
-      - Teaching Staff.md
+      - Teaching Staff 2024.md
       - Executive and Administrative Staff.md
       - Parents/.keep
       - Parents/Parent Teacher Conference 2024.md
