--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,5 +26,8 @@ links:
     collection: our-family
   - title: Our Links
     collection: our-links
+  - title: Info Hub
+    url: /ops/info-hub/school-life/assessment-information/
+    sublinks: []
   - title: Moe Kindergarten
     collection: moe-kindergarten
