{"message":"Update file: navigation.yml","userId":"2280","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,6 +28,12 @@ links:
     collection: our-links
   - title: Info Hub
     url: /ops/info-hub/school-life/assessment-information/
-    sublinks: []
+    sublinks:
+      - title: Highlights
+        url: /permalink
+      - title: School Life
+        url: /permalink
+      - title: Forms & Guides
+        url: /permalink
   - title: Moe Kindergarten
     collection: moe-kindergarten
