{"message":"Update file: navigation.yml","userId":"2280","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -35,5 +35,5 @@ links:
         url: /permalink
       - title: Forms & Guides
         url: /permalink
-  - title: Moe Kindergarten
+  - title: MOE Kindergarten
     collection: moe-kindergarten
