--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -35,5 +35,5 @@ links:
         url: /permalink
       - title: Forms & Guides
         url: /permalink
-  - title: MOE Kindergarten
+  - title: MK@Oasis
     collection: moe-kindergarten
