{"message":"Update file: navigation.yml","userId":"2280","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -30,7 +30,7 @@ links:
     url: /ops/info-hub/school-life/assessment-information/
     sublinks:
       - title: Highlights
-        url: /permalink
+        url: /ops/highlights/
       - title: School Life
         url: /permalink
       - title: Forms & Guides
