{"message":"Update file: navigation.yml","userId":"2280","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,7 +32,7 @@ links:
       - title: Highlights
         url: /ops/highlights/
       - title: School Life
-        url: /permalink
+        url: /ops/info-hub/school-life/assessment-information/
       - title: Forms & Guides
         url: /permalink
   - title: MOE Kindergarten
