{"message":"Update file: navigation.yml","userId":"2280","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -34,6 +34,6 @@ links:
       - title: School Life
         url: /ops/info-hub/school-life/assessment-information/
       - title: Forms & Guides
-        url: /permalink
+        url: /ops/info-hub/forms-n-guides/application-forms/
   - title: MOE Kindergarten
     collection: moe-kindergarten
