--- a/_our-info-hub/collection.yml
+++ b/_our-info-hub/collection.yml
@@ -2,5 +2,6 @@ collections:
   our-info-hub:
     output: true
     order:
+      - Forms & Guides.md
       - School Life.md
       - Highlights.md
