{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_others/collection.yml
+++ b/_others/collection.yml
@@ -14,6 +14,7 @@ collections:
       - School Life/School Bus Service.md
       - School Life/School Canteen.md
       - School Life/Sexuality Education.md
+      - Forms & Guides/Application Forms.md
       - Forms & Guides/.keep
       - Forms & Guides/Parents Gateway.md
       - Forms & Guides/Student Learning Space (SLS).md
