--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,5 +26,5 @@ links:
     collection: our-family
   - title: Our Links
     collection: our-links
-  - title: MOE Kindergarten
+  - title: MOE Kindergarten @ Oasis
     collection: moe-kindergarten
