{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,5 +2,6 @@ collections:
   info-hub:
     output: true
     order:
+      - Student Learning Space (SLS).md
       - Parents Gateway.md
       - Application Forms.md
