--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-hub:
     output: true
     order:
+      - Forms & Guides.md
       - Application Forms.md
       - Parents Gateway.md
       - Student Learning Space (SLS).md
