--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-hub:
     output: true
     order:
+      - School Life/Assessment Information.md
       - School Life/.keep
       - Forms & Guides/Student Learning Space (SLS).md
       - Forms & Guides/Parents Gateway.md
