--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-hub:
     output: true
     order:
+      - School Life/School Terms & Holidays.md
       - School Life/School Hours & Operations.md
       - School Life/Assessment Information.md
       - School Life/.keep
