--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-hub:
     output: true
     order:
+      - School Life/School Bus Service.md
       - School Life/School Bookshop & Uniform.md
       - School Life/.keep
       - School Life/Assessment Information.md
