{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-hub:
     output: true
     order:
+      - School Life/Sexuality Education.md
       - School Life/School Canteen.md
       - School Life/School Bus Service.md
       - School Life/School Bookshop & Uniform.md
