--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -9,7 +9,7 @@ collections:
       - School Life/School Canteen Food Menu.md
       - School Life/School Bookshop & Uniform.md
       - School Life/School Bus Service.md
-      - School Life/School Canteen.md
+      - School Life/School Canteen Advertisement.md
       - School Life/Sexuality Education.md
       - Forms & Guides/Student Learning Space (SLS).md
       - Forms & Guides/Parents Gateway.md
