--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,5 +26,7 @@ links:
     collection: our-family
   - title: Our Links
     collection: our-links
+  - title: Info Hub
+    collection: info-hub
   - title: MOE Kindergarten @ Oasis
     collection: moe-kindergarten
