--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -6,7 +6,7 @@ collections:
       - School Life/Assessment Information.md
       - School Life/School Hours & Operations.md
       - School Life/School Terms & Holidays.md
-      - School Life/School Canteen Food Menu.md
+      - School Life/School Canteen Menu.md
       - School Life/School Bookshop & Uniform.md
       - School Life/School Bus Service.md
       - School Life/School Canteen Advertisement.md
