--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,5 +28,5 @@ links:
     collection: our-links
   - title: Info Hub
     collection: info-hub
-  - title: MOE Kindergarten @ Oasis
+  - title: MOE Kindergarten
     collection: moe-kindergarten
