{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_our-family/collection.yml
+++ b/_our-family/collection.yml
@@ -6,6 +6,7 @@ collections:
       - Key Personnel.md
       - Teaching Staff.md
       - Executive and Administrative Staff.md
+      - Parents/Oasis Virtual Open House.md
       - Parents/Oasis Virtual Tour 2024.md
       - Parents/.keep
       - Parents/Parent Teacher Conference 2024.md
