{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_our-links/collection.yml
+++ b/_our-links/collection.yml
@@ -2,7 +2,7 @@ collections:
   our-links:
     output: true
     order:
-      - Oasis Virtual Tour 2024.md
+      - Virtual Open House 2024.md
       - Oasis Virtual Open House 2024.md
       - Students.md
       - Teachers.md
