{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_our-family/collection.yml
+++ b/_our-family/collection.yml
@@ -7,7 +7,7 @@ collections:
       - Teaching Staff.md
       - Executive and Administrative Staff.md
       - Parents/.keep
-      - Parents/Oasis Virtual Tour 2024.md
+      - Parents/Virtual Open House 2024.md
       - Parents/Oasis Virtual Open House 2024.md
       - Parents/Parent Teacher Conference 2024.md
       - Parents/Parent Teacher Conference 2023.md
