--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -5,7 +5,7 @@ collections:
       - School Life/.keep
       - School Life/Assessment Information.md
       - School Life/School Hours & Operations.md
-      - School Life/School Terms & Holidays.md
+      - School Life/School Terms & Holidays 2025.md
       - School Life/School Canteen Menu.md
       - School Life/School Bookshop & Uniform.md
       - School Life/School Bus Service.md
