{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -8,7 +8,7 @@ collections:
       - School Life/School Terms & Holidays 2025.md
       - School Life/School Canteen Menu.md
       - School Life/School Bookshop & Uniform.md
-      - School Life/School Bus Services.md
+      - School Life/School Bus Service.md
       - School Life/School Canteen Advertisement.md
       - School Life/Sexuality Education.md
       - Forms & Guides/.keep
