{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_moe-kindergarten/collection.yml
+++ b/_moe-kindergarten/collection.yml
@@ -14,6 +14,6 @@ collections:
       - Our KCare.md
       - Our Early Years Centre Partner.md
       - MK Forms.md
-      - Contact Us.md
+      - Contact MK@Oasis.md
       - Celebrating 10 Years with MOE Kindergarten.md
       - Our Open House 2024.md
