{"message":"Update file: navigation.yml","userId":"2280","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,5 +28,5 @@ links:
     collection: our-links
   - title: Info Hub
     collection: info-hub
-  - title: MK @ Oasis
+  - title: MK @ OA
     collection: moe-kindergarten
