{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_moe-kindergarten/collection.yml
+++ b/_moe-kindergarten/collection.yml
@@ -10,7 +10,7 @@ collections:
       - Our Learning Environment.md
       - "MK Oasians: Learning In Action!.md"
       - Our Events.md
-      - What Do Parents & Children Say.md
+      - What Parents & Children Say.md
       - Our KCare.md
       - Our Early Years Centre Partner.md
       - MK Forms.md
