{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Co Curricular Activities.md
-      - CCA Schedule 2024.md
+      - Schedule 2025.md
       - Achievements.md
       - Sports/.keep
       - Sports/Sports.md
