--- a/_our-links/collection.yml
+++ b/_our-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-links:
     output: true
     order:
+      - Chinese New Year 2025/.keep
       - Students.md
       - Teachers.md
       - Frequently Asked Questions.md
