{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_our-links/collection.yml
+++ b/_our-links/collection.yml
@@ -2,8 +2,8 @@ collections:
   our-links:
     output: true
     order:
-      - Chinese New Year 2025/Gallery.md
-      - Chinese New Year 2025/.keep
+      - Gallery/Gallery.md
+      - Gallery/.keep
       - Students.md
       - Teachers.md
       - Frequently Asked Questions.md
