{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_our-links/collection.yml
+++ b/_our-links/collection.yml
@@ -5,5 +5,5 @@ collections:
       - Students.md
       - Teachers.md
       - Frequently Asked Questions.md
-      - Gallery/.keep
-      - Gallery/Gallery.md
+      - Our Events/.keep
+      - Our Events/Gallery.md
