{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_our-links/collection.yml
+++ b/_our-links/collection.yml
@@ -6,4 +6,4 @@ collections:
       - Teachers.md
       - Frequently Asked Questions.md
       - Our Events/.keep
-      - Our Events/Gallery.md
+      - Our Events/Chinese New Year 2025.md
