{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_our-family/collection.yml
+++ b/_our-family/collection.yml
@@ -5,7 +5,7 @@ collections:
       - School Leaders.md
       - Key Personnel.md
       - Teaching Staff.md
-      - Executive and Administrative Staff.md
+      - School Administration Team.md
       - Parents/.keep
       - Parents/Parent Teacher Conference 2024.md
       - Parents/Parent Teacher Conference 2023.md
