--- a/_our-family/collection.yml
+++ b/_our-family/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-family:
     output: true
     order:
+      - Teacher Leaders.md
       - School Leaders.md
       - Key Personnel.md
       - Teaching Staff.md
