{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_moe-kindergarten/collection.yml
+++ b/_moe-kindergarten/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Our Vision, Mission & Values.md
-      - What We Offer.md
+      - Register for MK@Oasis.md
       - Our Team.md
       - Our Curriculum & Programmes.md
       - Our Learning Environment.md
