{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_moe-kindergarten/collection.yml
+++ b/_moe-kindergarten/collection.yml
@@ -9,7 +9,7 @@ collections:
       - Our Learning Environment.md
       - "MK Oasians: Learning In Action!.md"
       - Our Events.md
-      - What Parents & Children Say.md
+      - Testimonials.md
       - Our KCare.md
       - Our Early Years Centre Partner.md
       - Our Uniform.md
