{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_moe-kindergarten/collection.yml
+++ b/_moe-kindergarten/collection.yml
@@ -16,4 +16,4 @@ collections:
       - MK Forms.md
       - Contact Us.md
       - Celebrating 10 Years with MOE Kindergarten.md
-      - Our Open House 2025.md
+      - Our Open House.md
