{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_moe-kindergarten/collection.yml
+++ b/_moe-kindergarten/collection.yml
@@ -5,7 +5,7 @@ collections:
       - Our Vision, Mission & Values.md
       - Register for MK@Oasis.md
       - Our Team.md
-      - Our Curriculum & Programmes.md
+      - Our Curriculum & Programme.md
       - Our Learning Environment.md
       - "MK Oasians: Learning In Action!.md"
       - Our Events.md
