{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -16,4 +16,4 @@ collections:
       - Forms & Guides/Parents Gateway.md
       - Forms & Guides/Student Learning Space (SLS).md
       - Our Links/.keep
-      - Our Links/Our Links.md
+      - Our Links/Students.md
