{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-hub:
     output: true
     order:
+      - Teachers.md
       - Students.md
       - School Life/.keep
       - School Life/Assessment Information.md
