--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-hub:
     output: true
     order:
+      - Frequently Asked Questions.md
       - Teachers.md
       - Students.md
       - School Life/.keep
