--- a/_info-hub/collection.yml
+++ b/_info-hub/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-hub:
     output: true
     order:
+      - Our Events/.keep
       - Our Events.md
       - Chinese New Year 2025.md
       - School Life/.keep
