{"message":"Update file: navigation.yml","userId":"2280","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,8 +24,8 @@ links:
         url: /our-curriculum/co-curricular-activities/
   - title: Our Family
     collection: our-family
-  - title: Our Links
-    collection: our-links
+  - title: Our Pride
+    collection: our-pride
   - title: Info Hub
     collection: info-hub
   - title: MK@OA
