{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_education-minister-visit/collection.yml
+++ b/_education-minister-visit/collection.yml
@@ -2,4 +2,4 @@ collections:
   education-minister-visit:
     output: true
     order:
-      - Education Minister Visit.md
+      - Minister Visit.md
