--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ colors:
     - title: media-color-two
       color: "#744d9f"
     - title: media-color-three
-      color: "#00838f"
+      color: "#fafe55"
     - title: media-color-four
       color: "#00838f"
     - title: media-color-five
