{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_our-pride/collection.yml
+++ b/_our-pride/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-pride:
     output: true
     order:
+      - Minister Visit.md
       - Our Pride.md
       - Students Achievements/Achievements 2025.md
       - Students Achievements/Achievements 2024.md
