{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_our-pride/collection.yml
+++ b/_our-pride/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Minister Visit.md
-      - Our Pride.md
+      - Our Achievements.md
       - Students Achievements/.keep
       - Students Achievements/Achievements 2025.md
       - Students Achievements/Achievements 2024.md
