{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_our-pride/collection.yml
+++ b/_our-pride/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-pride:
     output: true
     order:
+      - Test/.keep
       - In the News.md
       - Students Achievements/.keep
       - Students Achievements/Achievements 2025.md
