--- a/_our-pride/collection.yml
+++ b/_our-pride/collection.yml
@@ -2,7 +2,7 @@ collections:
   our-pride:
     output: true
     order:
-      - In the News/In the News.md
+      - In the News/Minister Visit.md
       - In the News/.keep
       - Students Achievements/.keep
       - Students Achievements/Achievements 2025.md
