{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_our-pride/collection.yml
+++ b/_our-pride/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-pride:
     output: true
     order:
+      - Caring Teacher Awards 2026.md
       - In the News/Minister Visit.md
       - In the News/.keep
       - Students Achievements/.keep
