{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_our-family/collection.yml
+++ b/_our-family/collection.yml
@@ -6,7 +6,7 @@ collections:
       - Key Personnel.md
       - Teacher Leaders.md
       - Teaching Staff.md
-      - School Administration Team.md
+      - School Admin Team.md
       - Parents/.keep
       - Parents/Parent Teacher Conference 2024.md
       - Parents/Parent Teacher Conference 2023.md
