{"message":"Update file: collection.yml","userId":"2280","fileName":"collection.yml"}

--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Co Curricular Activities.md
       - Achievements.md
-      - Schedule and CCA Teachers 2026.md
+      - Schedule 2026.md
       - Sports/.keep
       - Sports/Sports.md
       - Sports/Badminton.md
