--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ colors:
       color: "#00838f"
     - title: media-color-five
       color: "#00838f"
-description: ""
+description: Passionate Learners, Compassionate Changemakers
 permalink: none
 baseurl: ""
 exclude:
